test/trivial/deitz/test_use_before_def3.good
Error: Variable 'x' used before defined (test_use_before_def3.chpl:3)
